migration alt/agora-2.x

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -480,6 +480,66 @@
   "user.extra.age.short.3": "30-49",
   "user.extra.age.short.4": "50-65",
   "user.extra.age.short.5": "65 or more",
+  "user.extra.age.custom.1": "Section 1er arrondissement",
+  "user.extra.age.custom.2": "Section 2ème arrondissement",
+  "user.extra.age.custom.3": "Section 3ème arrondissement Flora Tristan",
+  "user.extra.age.custom.4": "Section 4ème arrondissement",
+  "user.extra.age.custom.5": "Section 5ème arrondissement",
+  "user.extra.age.custom.6": "Section 6ème arrondissement",
+  "user.extra.age.custom.7": "Section 7ème arrondissement Gilles Martinet",
+  "user.extra.age.custom.8": "Section 8ème arrondissement P. Mendès-France",
+  "user.extra.age.custom.9": "Section 9ème arrondissement",
+  "user.extra.age.custom.10": "",
+  "user.extra.age.custom.11": "Section 10ème arrondissement",
+  "user.extra.age.custom.12": "Section 11ème arrondissement Léon Blum",
+  "user.extra.age.custom.13": "Section 12ème arrondissement Philippe Farine",
+  "user.extra.age.custom.14": "Section 13ème arrondissement Ouest - Lucie Aubrac",
+  "user.extra.age.custom.15": "Section 13ème arrondissement Est - Pierre Mauroy",
+  "user.extra.age.custom.16": "Section 14ème arrondissement Petit Montrouge",
+  "user.extra.age.custom.17": "Section 14ème arrondissement P. Beregovoy",
+  "user.extra.age.custom.18": "Section 15ème arrondissement Convention",
+  "user.extra.age.custom.19": "Section 15ème arrondissement François Mitterrand",
+  "user.extra.age.custom.20": "Section 15ème arrondissement Javel-Grenelle",
+  "user.extra.age.custom.21": "Section 16ème arrondissement Pierre Brossolette",
+  "user.extra.age.custom.22": "Section 17ème arrondissement Daniel Serus",
+  "user.extra.age.custom.23": "Section 18ème arrondissement chapelle Goutte d'Or",
+  "user.extra.age.custom.24": "Section 18ème arrondissement Claude Estier",
+  "user.extra.age.custom.25": "Section 18ème arrondissement J-B. Clément",
+  "user.extra.age.custom.26": "Section 19ème arrondissement Jean Jaurès",
+  "user.extra.age.custom.27": "Section 20ème arrondissement Commune de Paris",
+  "user.extra.age.custom.28": "Section Air-France",
+  "user.extra.age.custom.29": "Section Ministère Agriculture",
+  "user.extra.age.custom.30": "Section Ministère des Finances Bercy",
+  "user.extra.age.custom.31": "Section Ministère Education Nationale",
+  "user.extra.age.custom.32": "Section Ministère Intérieur",
+  "user.extra.age.custom.33": "Section Poste et Télécom Paris",
+  "user.extra.age.custom.34": "Section Sénat",
+  "user.extra.age.custom.35": "Section Services Publics",
+  "user.extra.age.custom.36": "Section Culture",
+  "user.extra.age.custom.37": "Section Temps Réels - la section numérique du PS",
+  "user.extra.age.custom.38": "Section ENS-ULM Jaurès",
+  "user.extra.age.custom.39": "Section Sciences-Po - Jean Zay",
+  "user.extra.age.custom.40": "Section Sorbonne",
+  "user.extra.age.custom.41": "Non adhérents - Paris 1er arrondissement",
+  "user.extra.age.custom.42": "Non adhérents - Paris 2ème arrondissement",
+  "user.extra.age.custom.43": "Non adhérents - Paris 3ème arrondissement",
+  "user.extra.age.custom.44": "Non adhérents - Paris 4ème arrondissement",
+  "user.extra.age.custom.45": "Non adhérents - Paris 5ème arrondissement",
+  "user.extra.age.custom.46": "Non adhérents - Paris 6ème arrondissement",
+  "user.extra.age.custom.47": "Non adhérents - Paris 7ème arrondissement",
+  "user.extra.age.custom.48": "Non adhérents - Paris 8ème arrondissement",
+  "user.extra.age.custom.49": "Non adhérents - Paris 9ème arrondissement",
+  "user.extra.age.custom.50": "Non adhérents - Paris 10ème arrondissement",
+  "user.extra.age.custom.51": "Non adhérents - Paris 11ème arrondissement",
+  "user.extra.age.custom.52": "Non adhérents - Paris 12ème arrondissement",
+  "user.extra.age.custom.53": "Non adhérents - Paris 13ème arrondissement",
+  "user.extra.age.custom.54": "Non adhérents - Paris 14ème arrondissement",
+  "user.extra.age.custom.55": "Non adhérents - Paris 15ème arrondissement",
+  "user.extra.age.custom.56": "Non adhérents - Paris 16ème arrondissement",
+  "user.extra.age.custom.57": "Non adhérents - Paris 17ème arrondissement",
+  "user.extra.age.custom.58": "Non adhérents - Paris 18ème arrondissement",
+  "user.extra.age.custom.59": "Non adhérents - Paris 19ème arrondissement",
+  "user.extra.age.custom.60": "Non adhérents - Paris 20ème arrondissement",
   "user.extra.job.1": "Student",
   "user.extra.job.2": "Company",
   "user.extra.job.3": "Public agent",
