Users import from CSV

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -240,6 +240,7 @@
   "cookie.message": "This website uses cookies to ensure you get the best experience on our website.",
   "democracyos.markdown.flavored": "DemocracyOS flavored markdown",
   "forgot.error.email-not-valid": "You must validate your email address before you can reset your account password",
+  "forgot.error.fake-email": "Temporary mail address : you can't change the password this way. Please contact the platform administrator.",
   "forgot.explanation": "We will send an email with a link to reset your password",
   "forgot.mail.example": "example@email.com",
   "forgot.mail.sent": "We just sent a message to your email with instructions to create a new password",
@@ -457,6 +458,8 @@
   "system.users.title.create": "Add user",
   "system.users.title.edit": "Edit user",
   "system.users.search.placeholder": "Search users...",
+  "system.users.update-from-csv": "Import users from .csv",
+  "system.users.update-from-csv.success": "Users successfully updated",
   "topics.actions.cause.do": "Add my Support",
   "topics.actions.cause.done": "You Support this",
   "topics.actions.poll.do": "Vote",
