--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -141,6 +141,8 @@
   "admin-topics.list.search.placeholder": "Rechercher un débat ...",
   "admin-topics.list.sort": "Trier",
   "admin-topics.list.title": "Liste des débats",
+  "admin-topics.update-from-csv": "Mise à jour des débats via .csv (beta)",
+  "admin-topics.update-from-csv.success": "Mise à jour des débats réussie",
   "admin-whitelist.actions": "Actions",
   "admin-whitelist.delete-whitelist.confirmation.body": "Cette action va effacer définitivement les données. Voulez-vous continuer ?",
   "admin-whitelist.delete-whitelist.confirmation.cancel": "Annuler",
@@ -237,6 +239,7 @@
   "cookie.message": "Ce site utilise des cookies pour l'authentification et une expérience de navigation optimale.",
   "democracyos.markdown.flavored": "Editeur Markdown personnalisé de DemocracyOS",
   "forgot.error.email-not-valid": "Vous devez valider votre adresse email avant de pouvoir réinitialiser votre mot de passe",
+  "forgot.error.fake-email": "Adresse email temporaire : vous ne pouvez pas changer le mot de passe de ce compte de cette manière. Veuillez contacter l'administrateur de la plateforme.",
   "forgot.explanation": "Vous allez recevoir par email un lien pour rétablir votre mot de passe",
   "forgot.mail.example": "exemple@email.com",
   "forgot.mail.sent": "Nous avons envoyé un message à votre boîte mail avec les instructions pour créer un nouveau mot de passe",
@@ -456,6 +459,8 @@
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
   "system.users.search.placeholder": "Rechercher un utilisateur ...",
+  "system.users.update-from-csv": "Import via fichier CSV (beta)",
+  "system.users.update-from-csv.success": "Mise à jour des utilisateurs réussie",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
