custo & fixes frenzy - display a closing message on topics - fix stats for non staff

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -417,17 +417,17 @@
   "signin.errors.too-many-attempts": "Le compte est actuellement verrouillé. Réessayez plus tard",
   "signin.login": "S'identifier",
   "signin.login-to": "Se connecter",
-  "signin.login-with-email": "Se connecter via email",
+  "signin.login-with-email": "Se connecter avec son identifiant",
   "signin.login-with-facebook": "Se connecter avec Facebook",
   "signin.login-with-google": "Se connecter avec Google",
-  "signin.or-login-with-email": "ou connectez-vous via email",
+  "signin.or-login-with-email": "ou connectez-vous avec votre identifiant",
   "signin.signup": "S'inscrire",
   "signup.accepting": "En vous inscrivant, vous acceptez nos",
   "signup.being-redirected": "Vous serez redirigé dans 5 secondes",
   "signup.browsing": "Naviguer",
   "signup.check-email": "Merci d'ouvrir l'email que nous vous avons envoyé (n'oubliez-pas de regarder aussi dans les emails indésirables) et de cliquer sur le lien fourni.",
   "signup.complete": "Inscription terminée",
-  "signup.email": "Email",
+  "signup.email": "Identifiant",
   "signup.email-exist": "Cette adresse email est déjà utilisée",
   "signup.email-sent": "Email envoyé",
   "signup.email-validated": "Votre adresse email a été validée et vous êtes maintenant connecté",
