Whitelist by domain name : - can CRUD whitelist (per forum) with 2 types : email & domain - Add a new config VAR strictWhitelist : if TRUE, user are blocked at signin instead of forum access - Public visibility is not impacted (yet)

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -46,7 +46,7 @@
   "admin-sidebar.topics.create": "Créer",
   "admin-sidebar.topics.list": "Liste",
   "admin-sidebar.topics.title": "Débats",
-  "admin-sidebar.whitelists.title": "Utilisateurs autorisés",
+  "admin-sidebar.whitelists.title": "Listes blanches",
   "admin-tags-form.button.submit": "Sauvegarder",
   "admin-tags-form.label.color": "Couleur",
   "admin-tags-form.label.icon": "Icone",
@@ -149,13 +149,15 @@
   "admin-whitelist.delete-whitelist.confirmation.ok": "Supprimer",
   "admin-whitelist.delete-whitelist.confirmation.title": "Supprimer la règle",
   "admin-whitelist.type": "Type",
+  "admin-whitelist.type.email": "Courriel",
+  "admin-whitelist.type.domain": "Nom de domaine",
   "admin-whitelist.value": "Valeur",
   "admin-whitelists-form.button.delete": "Supprimer",
   "admin-whitelists-form.button.submit": "Sauvegarder",
   "admin-whitelists-form.message.onsuccess": "Règle enregistrée avec succès",
   "admin-whitelists-form.title.create": "Nouvelle règle",
   "admin-whitelists-form.title.edit": "Modifier la règle",
-  "admin-whitelists-form.value.placeholder": "Une seule adresse ou plusieurs adresses email séparées par une virgule",
+  "admin-whitelists-form.value.placeholder": "Une seule adresse ou plusieurs adresses séparées par une virgule",
   "admin-whitelists.list.add-whitelist": "Ajouter",
   "admin-whitelists.list.search.placeholder": "Rechercher un utilisateur ...",
   "comment-card.flagged-as-spam": "Ce commentaire a été signalé comme contenu indésirable",
@@ -498,6 +500,7 @@
   "validators.input.not-exists": "L'élément {name} n'existe pas",
   "validators.invalid": "Invalide",
   "validators.invalid.author": "Auteur invalide",
+  "validators.invalid.domain": "Nom de domaine invalide",
   "validators.invalid.email": "Adresse email invalide",
   "validators.invalid.firstname": "Prénom invalide",
   "validators.invalid.forum": "Nom invalide",
