--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -46,7 +46,7 @@
   "admin-sidebar.topics.create": "Create",
   "admin-sidebar.topics.list": "List",
   "admin-sidebar.topics.title": "Topics",
-  "admin-sidebar.whitelists.title": "Enabled users",
+  "admin-sidebar.whitelists.title": "White lists",
   "admin-tags-form.button.submit": "Save",
   "admin-tags-form.label.color": "Color",
   "admin-tags-form.label.icon": "Icon",
@@ -151,13 +151,15 @@
   "admin-whitelist.delete-whitelist.confirmation.ok": "Delete",
   "admin-whitelist.delete-whitelist.confirmation.title": "Delete rule",
   "admin-whitelist.type": "Type",
+  "admin-whitelist.type.email": "Email",
+  "admin-whitelist.type.domain": "Domain name",
   "admin-whitelist.value": "Value",
   "admin-whitelists-form.button.delete": "Delete",
   "admin-whitelists-form.button.submit": "Save",
   "admin-whitelists-form.message.onsuccess": "Whitelist successfully saved",
   "admin-whitelists-form.title.create": "New whitelist",
   "admin-whitelists-form.title.edit": "Edit whitelist",
-  "admin-whitelists-form.value.placeholder": "Comma separated emails or just one email",
+  "admin-whitelists-form.value.placeholder": "Comma separated address or just one address",
   "admin-whitelists.list.add-whitelist": "Add",
   "admin-whitelists.list.search.placeholder": "Search a whitelist...",
   "comment-card.flagged-as-spam": "This argument has been flagged as spam.",
@@ -494,6 +496,7 @@
   "validators.input.not-exists": "{name} element does not exists",
   "validators.invalid": "Invalid",
   "validators.invalid.author": "Invalid author",
+  "validators.invalid.domain": "Invalid domain name",
   "validators.invalid.email": "Invalid email address",
   "validators.invalid.firstname": "Invalid firstname",
   "validators.invalid.forum": "Invalid name",
