add comment title

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -196,6 +196,7 @@
   "comments.send": "Envoyer",
   "comments.sign-in-required": "Vous devez être enregistré pour débattre sur ce site",
   "comments.sign-in-required-to-vote-comments": "ous devez être connecté pour noter les commentaires",
+  "comments.title.placeholder": "Titre",
   "comments.votes": "votes",
   "comments.your-argument": "Votre commentaire",
   "comments.your.arguments": "Vos commentaires",
@@ -217,6 +218,8 @@
   "common.pass-match-error": "Ne correspondent pas.",
   "common.read-more": "Lire plus",
   "common.read-less": "Lire moins",
+  "common.share.facebook": "Partager sur Facebook",
+  "common.share.twitter": "Partager sur Twitter",
   "common.sorts.by-title-asc": "titre de A -> Z",
   "common.sorts.closing-soon": "clôture proche",
   "common.sorts.newest-first": "plus récents d'abord",
