--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -197,6 +197,7 @@
   "comments.score.not-allowed": "You're not allowed to qualify this argument",
   "comments.send": "Send",
   "comments.sign-in-required": "You must be signed in to argue here",
+  "comments.title.placeholder": "Title",
   "comments.sign-in-required-to-vote-comments": "You must be signed in to up/downvote arguments",
   "comments.votes": "votes",
   "comments.your-argument": "Your argument",
@@ -218,6 +219,8 @@
   "common.pass-match-error": "Don't match.",
   "common.read-more": "Read more",
   "common.read-less": "Read less",
+  "common.share.facebook": "Share on Facebook",
+  "common.share.twitter": "Share on Twitter",
   "common.sorts.by-title-asc": "title a -> z",
   "common.sorts.closing-soon": "closing soon",
   "common.sorts.newest-first": "newest first",
