comments : fix share buttons + ux

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -223,8 +223,8 @@
   "common.share.twitter": "Share on Twitter",
   "common.sorts.by-title-asc": "title a -> z",
   "common.sorts.closing-soon": "closing soon",
-  "common.sorts.newest-first": "newest first",
-  "common.sorts.oldest-first": "oldest first",
+  "common.sorts.newest-first": "newest",
+  "common.sorts.oldest-first": "oldest",
   "common.sorts.random": "shuffle",
   "common.sorts.recently-updated": "recently updated",
   "common.sorts.score": "Relevance",
