--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -222,8 +222,8 @@
   "common.share.twitter": "Partager sur Twitter",
   "common.sorts.by-title-asc": "titre de A -> Z",
   "common.sorts.closing-soon": "clôture proche",
-  "common.sorts.newest-first": "plus récents d'abord",
-  "common.sorts.oldest-first": "plus anciens d'abord",
+  "common.sorts.newest-first": "plus récents",
+  "common.sorts.oldest-first": "plus anciens",
   "common.sorts.random": "aléatoire",
   "common.sorts.recently-updated": "mis à jour récemment",
   "common.sorts.score": "score",
