Comments module settings (topicsAttrs) : -  topicsAttrs : disable comments -  topicsAttrs : comments length -  config.json : ad-hoc default values -  both attrs can be enable on forum settings

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -136,6 +136,8 @@
   "admin-topics-form.title.create": "Create topic",
   "admin-topics-form.title.edit": "Edit topic",
   "admin-topics-form.title.preview": "View",
+  "admin-topics-form.topicsAttrs.commentsLength": "Comments length",
+  "admin-topics-form.topicsAttrs.disableComments": "Disable comments",
   "admin-topics-form.url": "URL",
   "admin-topics.list.add-topic": "New",
   "admin-topics.list.close.future": "Closing",
@@ -259,6 +261,8 @@
   "forum.form.title": "Create my DemocracyOS",
   "forum.form.title.label": "Community Title",
   "forum.form.title.placeholder": "The title for your community",
+  "forum.form.topicsAttrs.commentsLength": "Enable comments length limitation",
+  "forum.form.topicsAttrs.disableComments": "Enable comments disabling",
   "forum.form.url.label": "Democracy URL",
   "forum.form.url.unavailable": "URL is not available",
   "forum.status.creating": "Creating community...",
