--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -134,6 +134,8 @@
   "admin-topics-form.title.create": "Nouveau débat",
   "admin-topics-form.title.edit": "Modifier le débat",
   "admin-topics-form.title.preview": "Voir",
+  "admin-topics-form.topicsAttrs.commentsLength": "Taille des commentaires",
+  "admin-topics-form.topicsAttrs.disableComments": "Désactiver les commentaires",
   "admin-topics-form.url": "URL",
   "admin-topics.list.add-topic": "Nouveau",
   "admin-topics.list.close.future": "Clôture",
@@ -258,6 +260,8 @@
   "forum.form.title": "Créer un espace de consultation",
   "forum.form.title.label": "Nom",
   "forum.form.title.placeholder": "Le nom de votre consultation",
+  "forum.form.topicsAttrs.commentsLength": "Autoriser la limitation de la taille des commentaires",
+  "forum.form.topicsAttrs.disableComments": "Autoriser la désactivation des commentaires",
   "forum.form.url.label": "Chemin",
   "forum.form.url.unavailable": "L'URL n'est pas disponible",
   "forum.list.search.placeholder": "Rechercher une consultation ...",
