1st pass on replacing firstName / LastName with username : - model tweak - forms - common display (displayName, fullName) - external profiles

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -409,6 +409,7 @@
   "settings.sidebar.forums": "Communities",
   "settings.successfuly-updated": "Your profile was successfuly updated",
   "settings.title": "Settings",
+  "settings.user-name": "Nickname",
   "sidebar.closed": "Closed",
   "sidebar.hide-voted": "Hide voted by me",
   "sidebar.open": "Open",
@@ -449,6 +450,7 @@
   "signup.resend-validation-email": "Resend validation email",
   "signup.resend-validation-email-complete": "Resend validation email complete",
   "signup.retype-password": "Re-type password",
+  "signup.username": "Nickname",
   "signup.user-already-validated": "This user already validated the email address",
   "signup.validating": "Validating account.",
   "signup.validation-email-resent": "The validation email was resent.",
@@ -457,6 +459,7 @@
   "signup.with-email": "Signup with email",
   "signup.your-firstname": "Your firstname",
   "signup.your-lastname": "Your lastname",
+  "signup.your-username": "Your username",
   "signup.user-already-registered": "A user with the given username is already registered",
   "sorts.by-title-asc": "By title A -> Z",
   "sorts.closing-soon": "Closing soon",
