--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -411,6 +411,7 @@
   "settings.sidebar.forums": "Consultation",
   "settings.successfuly-updated": "Votre profil a été actualisé avec succès",
   "settings.title": "Paramètres",
+  "settings.user-name": "Pseudonyme",
   "sidebar.closed": "Clos",
   "sidebar.hide-voted": "Cacher mes votes",
   "sidebar.open": "En cours",
@@ -452,6 +453,7 @@
   "signup.resend-validation-email-complete": "Email de validation renvoyé",
   "signup.retype-password": "Retapez votre mot de passe",
   "signup.user-already-validated": "Ce participant a déjà validé son adresse email",
+  "signup.username": "Pseudonyme",
   "signup.validating": "Inscription en cours de validation",
   "signup.validation-email-resent": "L'email de validation a été renvoyé.",
   "signup.welcome": "Bienvenue, {name}!",
@@ -459,6 +461,7 @@
   "signup.with-email": "Inscription via email",
   "signup.your-firstname": "Votre prénom",
   "signup.your-lastname": "Votre nom",
+  "signup.your-username": "Votre pseudonyme",
   "system.sidebar.forums": "Consultations",
   "system.sidebar.others": "Autres",
   "system.sidebar.users": "Utilisateurs",
