Add comment reference

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -174,6 +174,7 @@
   "comments.arguments": "Commentaires",
   "comments.arguments.confirm-remove": "Voulez-vous supprimer ce commentaire ?",
   "comments.arguments.reply": "Répondre à ce commentaire",
+  "comments.arguments.view": "Voir ce commentaire",
   "comments.cannot-be-empty": "Le commentaire ne peut pas être vide",
   "comments.cannot-remove": "Le commentaire a reçu des réponses et ne peut pas être supprimé !",
   "comments.create.placeholder": "Ajouter un commentaire...",
@@ -211,6 +212,7 @@
   "common.close": "Ferme",
   "common.closed": "Fermé",
   "common.copy.link": "Copier le lien dans le presse papier",
+  "common.copy.ref": "Copier la référence dans le presse papier",
   "common.edit": "Modifier",
   "common.filter": "filtrer",
   "common.internal-error": "Une erreur s'est produite",
