--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -175,6 +175,7 @@
   "comments.arguments": "Arguments",
   "comments.arguments.confirm-remove": "Do you want to remove this reply?",
   "comments.arguments.reply": "Reply to this argument",
+  "comments.arguments.view": "View this comment",
   "comments.cannot-be-empty": "Argument cannot be empty",
   "comments.cannot-remove": "Comment has replies, cannot be removed!",
   "comments.create.placeholder": "Write an argument...",
@@ -212,6 +213,7 @@
   "common.close": "Closes",
   "common.closed": "Closed",
   "common.copy.link": "Copy link to clipboard",
+  "common.copy.ref": "Copy reference to clipboard",
   "common.edit": "Edit",
   "common.internal-error": "There was an error.",
   "common.more-information": "More information",
