--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -174,6 +174,7 @@
   "comments.arguments": "Commentaires",
   "comments.arguments.confirm-remove": "Voulez-vous supprimer ce commentaire ?",
   "comments.arguments.reply": "Répondre à ce commentaire",
+  "comments.arguments.replies": "afficher / masquer toutes les réponses",
   "comments.arguments.view": "Voir ce commentaire",
   "comments.cannot-be-empty": "Le commentaire ne peut pas être vide",
   "comments.cannot-remove": "Le commentaire a reçu des réponses et ne peut pas être supprimé !",
