Add Topic option (topicAttrs) : hide results before closing

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -137,6 +137,7 @@
   "admin-topics-form.title.preview": "Voir",
   "admin-topics-form.topicsAttrs.commentsLength": "Taille des commentaires",
   "admin-topics-form.topicsAttrs.disableComments": "Désactiver les commentaires",
+  "admin-topics-form.topicsAttrs.hideResultsBeforeClosing": "Cacher les résultats avant la clôture",
   "admin-topics-form.url": "URL",
   "admin-topics.list.add-topic": "Nouveau",
   "admin-topics.list.close.future": "Clôture",
@@ -266,6 +267,7 @@
   "forum.form.title.placeholder": "Le nom de votre consultation",
   "forum.form.topicsAttrs.commentsLength": "Autoriser la limitation de la taille des commentaires",
   "forum.form.topicsAttrs.disableComments": "Autoriser la désactivation des commentaires",
+  "forum.form.topicsAttrs.hideResultsBeforeClosing": "Autoriser le masquage des résultats avant la clôture",
   "forum.form.url.label": "Chemin",
   "forum.form.url.unavailable": "L'URL n'est pas disponible",
   "forum.list.search.placeholder": "Rechercher une consultation ...",
