--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -138,6 +138,7 @@
   "admin-topics-form.title.preview": "View",
   "admin-topics-form.topicsAttrs.commentsLength": "Comments length",
   "admin-topics-form.topicsAttrs.disableComments": "Disable comments",
+  "admin-topics-form.topicsAttrs.hideResultsBeforeClosing": "Hide results before closing",
   "admin-topics-form.url": "URL",
   "admin-topics.list.add-topic": "New",
   "admin-topics.list.close.future": "Closing",
@@ -266,6 +267,7 @@
   "forum.form.title.placeholder": "The title for your community",
   "forum.form.topicsAttrs.commentsLength": "Enable comments length limitation",
   "forum.form.topicsAttrs.disableComments": "Enable comments disabling",
+  "forum.form.topicsAttrs.hideResultsBeforeClosing": "Enable hidding results before closing",
   "forum.form.url.label": "Democracy URL",
   "forum.form.url.unavailable": "URL is not available",
   "forum.status.creating": "Creating community...",
