Add next topic link

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -146,6 +146,8 @@
   "admin-topics-form.topicsAttrs.commentsLength": "Comments length",
   "admin-topics-form.topicsAttrs.disableComments": "Disable comments",
   "admin-topics-form.topicsAttrs.hideResultsBeforeClosing": "Hide results before closing",
+  "admin-topics-form.topicsAttrs.nextTopic": "Next topic",
+  "admin-topics-form.topicsAttrs.nextTopic.description": "Full link to next topic (http://...)",
   "admin-topics-form.url": "URL",
   "admin-topics.list.add-topic": "New",
   "admin-topics.list.close.future": "Closing",
@@ -275,6 +277,7 @@
   "forum.form.topicsAttrs.commentsLength": "Enable comments length limitation",
   "forum.form.topicsAttrs.disableComments": "Enable comments disabling",
   "forum.form.topicsAttrs.hideResultsBeforeClosing": "Enable hidding results before closing",
+  "forum.form.topicsAttrs.nextTopic": "Enable link \"Next topic\"",
   "forum.form.url.label": "Democracy URL",
   "forum.form.url.unavailable": "URL is not available",
   "forum.status.creating": "Creating community...",
@@ -353,6 +356,7 @@
   "proposal-article.article.alert.text": "This is DemocracyOS's public demo.",
   "proposal-article.create": "Create proposal",
   "proposal-article.edit": "Edit proposal",
+  "proposal-article.next": "Go to next topic",
   "proposal-article.participant.plural": "Participants",
   "proposal-article.participant.singular": "Participant",
   "proposal-article.view-original-text": "View the original text",
