--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -138,6 +138,8 @@
   "admin-topics-form.topicsAttrs.commentsLength": "Taille des commentaires",
   "admin-topics-form.topicsAttrs.disableComments": "Désactiver les commentaires",
   "admin-topics-form.topicsAttrs.hideResultsBeforeClosing": "Cacher les résultats avant la clôture",
+  "admin-topics-form.topicsAttrs.nextTopic": "Débat suivant",
+  "admin-topics-form.topicsAttrs.nextTopic.description": "Lien complet vers le débat suivant (http://...)",
   "admin-topics-form.url": "URL",
   "admin-topics.list.add-topic": "Nouveau",
   "admin-topics.list.close.future": "Clôture",
@@ -268,6 +270,7 @@
   "forum.form.topicsAttrs.commentsLength": "Autoriser la limitation de la taille des commentaires",
   "forum.form.topicsAttrs.disableComments": "Autoriser la désactivation des commentaires",
   "forum.form.topicsAttrs.hideResultsBeforeClosing": "Autoriser le masquage des résultats avant la clôture",
+  "forum.form.topicsAttrs.nextTopic": "Activer le lien \"Débat suivant\"",
   "forum.form.url.label": "Chemin",
   "forum.form.url.unavailable": "L'URL n'est pas disponible",
   "forum.list.search.placeholder": "Rechercher une consultation ...",
@@ -347,6 +350,7 @@
   "proposal-article.article.alert.text": "Ceci est la version publique de démonstration de DemocracyOS.",
   "proposal-article.create": "Créer un débat",
   "proposal-article.edit": "Modifier le débat",
+  "proposal-article.next": "Aller au débat suivant",
   "proposal-article.participant.plural": "Participants",
   "proposal-article.participant.singular": "Participant",
   "proposal-article.view-original-text": "Voir la référence externe",
