Add "update profile on next login" options

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -425,6 +425,7 @@
   "settings.sidebar.forums": "Communities",
   "settings.successfuly-updated": "Your profile was successfuly updated",
   "settings.title": "Settings",
+  "settings.updateOnNextLogin": "Update on next login",
   "settings.user-name": "Nickname",
   "sidebar.closed": "Closed",
   "sidebar.hide-voted": "Hide voted by me",
