--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -420,6 +420,7 @@
   "settings.sidebar.forums": "Consultation",
   "settings.successfuly-updated": "Votre profil a été actualisé avec succès",
   "settings.title": "Paramètres",
+  "settings.updateOnNextLogin": "Mettre à jour à la prochaine connexion",
   "settings.user-name": "Pseudonyme",
   "sidebar.closed": "Clos",
   "sidebar.hide-voted": "Cacher mes votes",
