Add duplicate forums actions

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -250,6 +250,7 @@
   "common.users": "participants",
   "common.comment": "comment",
   "common.comments": "comments",
+  "common.view": "View",
   "common.vote": "vote",
   "common.votes": "votes",
   "common.ratings": "ratings",
@@ -267,13 +268,15 @@
   "forgot.reset": "Reset Password!",
   "form.please-wait": "Please wait",
   "form.send": "Send",
+  "forum.form.copy-suffix": "-copy",
   "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Create",
   "forum.form.summary.label": "Summary",
-  "forum.form.summary.placeholder": "What is your community about?",
-  "forum.form.title": "Create my DemocracyOS",
-  "forum.form.title.label": "Community Title",
-  "forum.form.title.placeholder": "The title for your community",
+  "forum.form.summary.placeholder": "What is your forum about?",
+  "forum.form.title.copy": "Duplicate a forum",
+  "forum.form.title.create": "Create a forum",
+  "forum.form.title.label": "Forum title",
+  "forum.form.title.placeholder": "The title for your forum",
   "forum.form.topicsAttrs.commentsLength": "Enable comments length limitation",
   "forum.form.topicsAttrs.disableComments": "Enable comments disabling",
   "forum.form.topicsAttrs.hideResultsBeforeClosing": "Enable hidding results before closing",
