--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -243,6 +243,7 @@
   "common.users": "participants",
   "common.comment": "commentaire",
   "common.comments": "commentaires",
+  "common.view": "Voir",
   "common.vote": "vote",
   "common.votes": "votes",
   "common.ratings": "appréciations",
@@ -260,11 +261,13 @@
   "forgot.reset": "Réinitialiser votre mot de passe !",
   "form.please-wait": "S'il vous plaît, attendez",
   "form.send": "Envoyer",
+  "forum.form.copy-suffix": "-copie",
   "forum.form.cover": "Image URL",
   "forum.form.create.submit": "Créer une consultation",
   "forum.form.summary.label": "Description",
   "forum.form.summary.placeholder": "Quel est l'objet de votre consultation ?",
-  "forum.form.title": "Créer un espace de consultation",
+  "forum.form.title.copy": "Dupliquer un espace de consultation",
+  "forum.form.title.create": "Créer un espace de consultation",
   "forum.form.title.label": "Nom",
   "forum.form.title.placeholder": "Le nom de votre consultation",
   "forum.form.topicsAttrs.commentsLength": "Autoriser la limitation de la taille des commentaires",
