missing refresh on comments action

--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -297,6 +297,12 @@
   "help.tos.title": "Conditions d'utilisation",
   "homepage.create-debate": "Créer mon premier débat",
   "homepage.no-topics": "Il n'y a pas de débat à afficher",
+  "homepage.featured.last.title": "Derniers commentaires",
+  "homepage.featured.last.description": "",
+  "homepage.featured.voted.title": "Les plus votés",
+  "homepage.featured.voted.description": "",
+  "homepage.featured.help.title": "À évaluer",
+  "homepage.featured.help.description": "Aidez-nous à évaluer les contributions suivantes",
   "invalid.password": "Mot de passe invalide",
   "ldap.error.default" : "Erreur LDAP : ",
   "markdown.cheatsheet.title": "Mise en forme des textes",
