--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -303,6 +303,12 @@
   "help.tos.title": "Terms of Service",
   "homepage.create-debate": "Create my first topic",
   "homepage.no-topics": "There are no topics to display",
+  "homepage.featured.last.title": "Last comments",
+  "homepage.featured.last.description": "",
+  "homepage.featured.voted.title": "Most rated",
+  "homepage.featured.voted.description": "",
+  "homepage.featured.help.title": "To be rated",
+  "homepage.featured.help.description": "Help us rate these comments.",
   "invalid.password": "Invalid password",
   "ldap.error.default" : "LDAP error : ",
   "markdown.cheatsheet.title": "Formatting help",
