--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -488,6 +488,7 @@
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
   "system.users.search.placeholder": "Rechercher un utilisateur ...",
+  "system.upload":"upload",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
