Home done on mobile

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -307,8 +307,9 @@
   "homepage.featured.last.description": "",
   "homepage.featured.voted.title": "Most rated",
   "homepage.featured.voted.description": "",
-  "homepage.featured.help.title": "To be rated",
-  "homepage.featured.help.description": "Help us rate these comments.",
+  "homepage.featured.help.title": "Help us to evaluate the new propositions",
+  "homepage.featured.help.description": "Contribute to the identification of the best contributions by expressing your opinion on the propositions of other participants which are randomly presented to you.",
+  "homepage.featured.others.title": "Discover other propositions",
   "invalid.password": "Invalid password",
   "ldap.error.default" : "LDAP error : ",
   "markdown.cheatsheet.title": "Formatting help",
