--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -301,8 +301,9 @@
   "homepage.featured.last.description": "",
   "homepage.featured.voted.title": "Les plus votés",
   "homepage.featured.voted.description": "",
-  "homepage.featured.help.title": "À évaluer",
-  "homepage.featured.help.description": "Voici quelques contributions sur lesquelles vous pouvez donner votre avis.",
+  "homepage.featured.help.title": "Aider nous à évaluer les nouvelles propositions",
+  "homepage.featured.help.description": "Contribuez à l'analyse des meilleures contributions en exprimant votre avis sur les propositions d'autres participants qui vous sont présentées de manière aléatoire.",
+  "homepage.featured.others.title": "Découvrez d'autres propositions",
   "invalid.password": "Mot de passe invalide",
   "ldap.error.default" : "Erreur LDAP : ",
   "markdown.cheatsheet.title": "Mise en forme des textes",
