Featured Comments : voted today

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -305,8 +305,13 @@
   "homepage.no-topics": "There are no topics to display",
   "homepage.featured.last.title": "Last comments",
   "homepage.featured.last.description": "",
-  "homepage.featured.voted.title": "Most rated",
+  "homepage.featured.last.empty": "",
+  "homepage.featured.voted.title": "Most rated of all time",
   "homepage.featured.voted.description": "",
+  "homepage.featured.voted.empty": "No votes",
+  "homepage.featured.votedToday.title": "Most rated of today",
+  "homepage.featured.votedToday.description": "",
+  "homepage.featured.votedToday.empty": "No votes today",
   "homepage.featured.help.title": "Help us to evaluate the new propositions",
   "homepage.featured.help.description": "Contribute to the identification of the best contributions by expressing your opinion on the propositions of other participants which are randomly presented to you.",
   "homepage.featured.others.title": "Discover other propositions",
