--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -299,8 +299,13 @@
   "homepage.no-topics": "Il n'y a pas de débat à afficher",
   "homepage.featured.last.title": "Derniers commentaires",
   "homepage.featured.last.description": "",
-  "homepage.featured.voted.title": "Les plus votés",
+  "homepage.featured.last.empty": " ",
+  "homepage.featured.voted.title": "Les plus votés au total",
   "homepage.featured.voted.description": "",
+  "homepage.featured.voted.empty": "Aucun vote",
+  "homepage.featured.votedToday.title": "Les plus votés aujourd'hui",
+  "homepage.featured.votedToday.description": "",
+  "homepage.featured.votedToday.empty": "Aucun vote aujourd'hui",
   "homepage.featured.help.title": "Aider nous à évaluer les nouvelles propositions",
   "homepage.featured.help.description": "Contribuez à l'analyse des meilleures contributions en exprimant votre avis sur les propositions d'autres participants qui vous sont présentées de manière aléatoire.",
   "homepage.featured.others.title": "Découvrez d'autres propositions",
