--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -306,9 +306,10 @@
   "homepage.featured.votedToday.title": "Les plus votés aujourd'hui",
   "homepage.featured.votedToday.description": "",
   "homepage.featured.votedToday.empty": "Aucun vote aujourd'hui",
-  "homepage.featured.help.title": "Aider nous à évaluer les nouvelles propositions",
+  "homepage.featured.help.title": "Aidez-nous à évaluer les nouvelles propositions",
   "homepage.featured.help.description": "Contribuez à l'analyse des meilleures contributions en exprimant votre avis sur les propositions d'autres participants qui vous sont présentées de manière aléatoire.",
   "homepage.featured.others.title": "Découvrez d'autres propositions",
+  "homepage.featured.button.topic": "Accéder au débat",
   "invalid.password": "Mot de passe invalide",
   "ldap.error.default" : "Erreur LDAP : ",
   "markdown.cheatsheet.title": "Mise en forme des textes",
