fix uploads page

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -38,6 +38,7 @@
   "admin-permissions.visibility.public.title": "Open for All",
   "admin-permissions.visibility.title": "Visibility",
   "admin-sidebar.comments.title": "Comments",
+  "admin-sidebar.upload.title": "Upload",
   "admin-sidebar.general.title": "General",
   "admin-sidebar.tags-moderation.title": "Tags moderation",
   "admin-sidebar.permissions.title": "Privileges",
@@ -257,6 +258,12 @@
   "common.ratings": "ratings",
   "common.ratings.up": "like",
   "common.ratings.down": "dislike",
+  "common.upload.one": "Upload file",
+  "common.upload.many": "Upload files",
+  "common.upload.delete.one": "Delete",
+  "common.upload.delete.many": "Delete all files",
+  "common.upload.select.one": "Choose a file",
+  "common.upload.select.many": "Chosse many files",
   "cookie.allow": "Allow cookies",
   "cookie.decline": "Decline",
   "cookie.message": "This website uses cookies to ensure you get the best experience on our website.",
