--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -38,7 +38,7 @@
   "admin-permissions.visibility.public.title": "Ouvert à tous",
   "admin-permissions.visibility.title": "Visibilité",
   "admin-sidebar.comments.title": "Commentaires",
-  "admin-sidebar.upload.title": "upload",
+  "admin-sidebar.upload.title": "Upload",
   "admin-sidebar.general.title": "Général",
   "admin-sidebar.permissions.title": "Autorisations",
   "admin-sidebar.tags.create": "Créer",
@@ -251,6 +251,12 @@
   "common.ratings": "appréciations",
   "common.ratings.up": "approbation",
   "common.ratings.down": "désapprobation",
+  "common.upload.one": "Envoyer un fichier",
+  "common.upload.many": "Envoyer plusieurs fichiers",
+  "common.upload.delete.one": "Supprimer",
+  "common.upload.delete.many": "Supprimer tous les fichiers",
+  "common.upload.select.one": "Choisir un fichier",
+  "common.upload.select.many": "Choisir plusieurs fichiers",
   "cookie.allow": "Autoriser les cookies",
   "cookie.decline": "Refuser",
   "cookie.message": "Ce site utilise des cookies pour l'authentification et une expérience de navigation optimale.",
@@ -488,7 +494,7 @@
   "system.users.title.create": "Créer un utilisateur",
   "system.users.title.edit": "Modifier un utilisateur",
   "system.users.search.placeholder": "Rechercher un utilisateur ...",
-  "system.upload":"upload",
+  "system.upload":"Fichiers",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
